# CallSense-Be

./: .env.sample  .gitignore  .prospector.yaml  CHANGELOG.md  Makefile  README.md  alembic.ini  app.py  docker-compose.yml  pyproject.toml
assets/models/: label_encoder.pkl  sentiment.h5  sentiment.keras
common/: config.py  constant.py  dependencies.py  exception.py
common/helper/http/: exception_handler.py
common/orm/: __init__.py  base.py  call.py  call_detail.py  recording.py
common/schema/base/: entity.py  response.py
common/schema/enum/: error_code.py
common/schema/exception/: entity.py  enum.py  response.py
common/utils/: __init__.py  base64_converter.py  user_data.py
database/: env.py
database/versions/: 3ec846f00d60_init.py  48e4234ecfd0_init.py
deployment/docker/: Dockerfile
src/: router.py
src/call/adapter/: agent_repository.py  call_detail_repository.py  firestorage.py  firestore.py  recording_repository.py  repository.py  uow.py
src/call/domain/: entity.py  enum.py  interface.py
src/call/http/: api.py
src/call/http/agent/: agent.py
src/call/http/agent/schema/: __init__.py  request.py  response.py
src/call/http/agent/schema/model/: __init__.py  agent.py
src/call/http/call/: call.py
src/call/http/call/schema/: request.py  response.py
src/call/http/call/schema/model/: __init__.py  call.py
src/call/http/chat/: chat.py
src/call/http/chat/schema/: response.py
src/call/http/chat/schema/model/: __init__.py  chat.py
src/call/service/: agent.py  call.py  rag.py  recording.py  sentiment.py
